--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "axios": "^0.27.2",
     "phosphor-react": "^1.4.1",
     "react": "^18.0.0",
+    "react-bootstrap-typeahead": "^6.0.0-rc.2",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-spotify-web-playback": "^0.10.0",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
+    "sass": "^1.53.0",
     "spotify-web-api-node": "^5.0.2"
   },
   "devDependencies": {
