--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 VITE_SPOTIFY_CLIENT_ID = fca3904abf904521b90b32ea5da9aed9
 VITE_SPOTIFY_CLIENT_SECRET = 7ad92d54797f491b8f3248fce9cacad7
-VITE_SPOTIFY_REDIRECT_URI = http://localhost:3000
+VITE_SPOTIFY_REDIRECT_URI = https://chartify-nu.vercel.app
 VITE_SPOTIFY_SCOPES = "streaming%20user-read-private%20user-read-email%20user-library-read%20user-library-modify%20user-read-playback-state%20user-modify-playback-state%20playlist-read-collaborative%20playlist-read-private%20user-read-recently-played%20user-follow-read"
 VITE_SPOTIFY_AUTHORIZE_URL = https://accounts.spotify.com/authorize
-VITE_SERVER_URL = http://localhost:3001
+VITE_SERVER_URL = https://chartify-backend-1.herokuapp.com
